@@ -1,3 +1,4 @@
+	* need_save_resume_data() will no longer return true every 15 minutes
 	* make the file_status interface explicitly public types
 	* added resolver_cache_timeout setting for internal host name resolver
 	* make parse_magnet_uri take a string_view instead of std::string
